--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.PetaniMaju"
         tools:targetApi="31">
         <activity
+            android:name=".view.forum.fitur_chat"
+            android:exported="false" />
+        <activity
             android:name=".view.education.DetailEducationActivity"
             android:exported="false" />
         <activity
