--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.PetaniMaju"
         tools:targetApi="31">
         <activity
+            android:name=".view.shop.StrukActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.shop.BerhasilActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.shop.BayarActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.shop.MetodeActivity"
             android:exported="false" />
         <activity
